:rotating_light: Fixed PMD errors